fix padding on safari

--- a/src/browser/style.less
+++ b/src/browser/style.less
@@ -343,7 +343,7 @@ html, body, main {
         font-size: 1.2rem;
         font-weight: 900;
         margin-bottom: 0;
-        padding-bottom: 10px;
+        padding: .5rem 0;
         border-bottom: 1px lightgrey solid;
       }
       .subText {
